...
        android:scrollbarThumbVertical="@color/white"
        app:subtitleTextColor="@color/white"
        app:theme="@style/ThemeOverlay.AppCompat"
        app:titleTextColor="@color/white" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        style="@style/MyBottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        app:itemTextColor="@color/white"
        app:menu="@menu/menu_main"
        app:tabSelectedTextColor="@color/white"
        app:tabTextColor="@color/teal_700"

        />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:navGraph="@navigation/nav_graph"/>

...
